<resources>
    <string name="app_name">Kanchi Meity</string>
    <string name="my_text"><u>Forgot Password</u>.</string>

    <string name="produce_aggregation">Produce Aggregation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="username_phno">Username or Mobile No</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_pass">Forgot Password</string>

    <string name="record_est_purchase">Lot Identification</string>
    <string name="record_actual_purchase">Purchase Entry</string>
    <string name="record_actual_purchase2">To Advance Payments</string>
    <string name="record_approve_purchase">Approve Actual Purchase</string>
    <string name="record_warehouse_purchase">Approve Warehouse Purchase</string>
    <string name="nav_app_est_pur">Lot Identification List</string>
    <string name="nav_rec_est_purchase">Lot Identification</string>
    <string name="nav_rec_act_purchase">Record Act.Purchase</string>
    <string name="nav_rec_act_purchase2">To Advance Payments</string>
    <string name="nav_app_act_purchase">Approve Act.Purchase</string>
    <string name="view_estimate">OverAll View</string>
    <string name="nav_seting">Settings</string>
    <string name="logout">Logout</string>
    <string name="transaction">Transactions</string>
    <string name="master">Masters</string>
    <string name="sync">Sync</string>

    <!--Record Est Purchase-->
    <string name="farmer_code">Farmer Code</string>
    <string name="tab_for_search_code">Tap For SearCh &amp; Select Scan QR Code</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="populate">Populate</string>
    <string name="member_type">Member Type</string>
    <string name="auto_populate">Auto populate basic selection</string>
    <string name="item">Crop Name</string>
    <string name="tab_for_selection">Tab For Selection</string>
    <string name="estimate_quantity">Estimated Quantity</string>
    <string name="optional">Optional</string>
    <string name="estimated_price">Estimated Rate</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="estimated_pickupdate">Estimated Pick-up Date</string>
    <string name="remarks">Remarks</string>
    <string name="input">Input</string>
    <string name="lotno">Lot No.</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="calculate">Calculate</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="goback">Go Back</string>
    <string name="warehouse">WareHouse</string>
    <string name="uom">UOM</string>
    <string name="update_downloaded">Downloaded</string>
    <string name="restart">Restart</string>
    <string name="version">VERSION 1.21</string>
    <string name="buyername">Buyer Name</string>
    <string name="itm">Item</string>
    <string name="itmvar">Item Variety</string>
    <string name="qty">Quantity</string>
    <string name="qc">QC Person</string>
    <string name="pd">Pick Up Date</string>
    <string name="rmk">Remarks</string>
    <string name="vt">Vehicle Type</string>
    <string name="vno">Vehicle No</string>
    <string name="lrp">Lrp Name</string>
    <string name="lrpm">Lrp Mobile No</string>
    <string name="img">Image</string>
    <string name="snb">Serial No Of Bags</string>
    <string name="nb">No Of Bags</string>
    <string name="sap">Search and Populate</string>

</resources>
