<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linar_rec_est_pur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"

            android:gravity="center">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/est_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:text="@string/record_est_purchase"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linar_rec_act_pur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/est_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:text="@string/record_actual_purchase"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linar_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">

            <ImageView
                android:id="@+id/img2se"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/est_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:text="Sale Entry"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linar_rec_act_pur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/est_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img1"
                android:text="@string/record_actual_purchase2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
