<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pawhs.QparSalenew">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/txt_quality_para"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="Tap to Select Quality Parameter"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_white" />

            <TextView
                android:id="@+id/txt_uom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="UoM"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_white" />

            <TextView
                android:id="@+id/txt_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="Range"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_white" />

            <EditText
                android:id="@+id/edt_actualvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="Actual Value"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />
            <!--<View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_white" />-->

            <Spinner
                android:id="@+id/spin_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_background"
                android:visibility="gone"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <android.widget.Button
                    android:id="@+id/but_add"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/but_save"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.widget.Button
                    android:id="@+id/but_close"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/but_viee"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.widget.Button
                    android:id="@+id/but_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/but_cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_qualitypara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>